<resources>
    <string name="app_name">SmartRead</string>
    <string name="article">Article</string>
    <string name="settings">Settings</string>

    <string name="empty_articles_text">No articles to show</string>

    <string name="search_articles">Search Articles</string>
    <string name="search_custom">Search %s</string>

    <string name="viewed_articles">Viewed Articles</string>
    <string name="related_articles">Related Articles</string>

    <string name="deleted">Article Removed</string>
    <string name="undo">UNDO</string>

    <!-- Article Activity -->
    <string name="article_hyperlink">Read Article</string>
    <string name="average_credibility_score">Average Credibility Score: %d%%</string>
    <string name="type_of_source">Type of Source</string>
    <string name="source_score">Source Score: 74%</string>
    <string name="content_score">Content Score: 90%</string>

    <!-- Settings -->
    <string name="news_alerts">News Alerts</string>
    <string name="alert_frequency">Alert Frequency</string>
    <string name="alert_frequency_desc">Manage your notification alerts to accommodate your expectations and necessities</string>
    <string name="turn_off_alerts">Turn off notification alerts for articles</string>
    <string name="clear_history">Clear History</string>
    <string name="clear_all_history">Clear all article history</string>
    <string name="clear">Clear</string>

    <string name="about_us">About Us</string>
    <string name="about_us_desc">Internet users\' susceptibility to fake news has grown remarkably as the propagation of social media. The aim of our app is to empower the users giving them an effortless and honest interaction with the web.</string>

    <string name="turn_off_all">Turn off for All Articles</string>
    <string name="turn_off_reason">Up to Reasonably Credible Articles</string>
    <string name="turn_off_untrust">Only Untrustworthy Articles</string>

    <string name="reason_desc">Up to Reasonably Credible Articles: Only Articles have below 75% credibility</string>
    <string name="untrust_desc">Only Untrustworthy Articles: Only Articles with rating below 60%</string>

    <!-- Article 1 -->
    <string name="article_1_header">Do Owners and Their Dogs Have Similar Personalities?</string>
    <string name="article_1_source">Psychology Today</string>
    <string name="article_1_author">Ray Kidman</string>
    <string name="article_1_desc">A new study explores whether pets and owners share personalities.</string>
    <string name="article_1_credibility">88%</string>

    <string name="article_1_type_source">National Geographic is an American digital cable and satellite television network and flagship channel that is owned by National Geographic Partners. This journal writes about Geography, Science, History, Nature and Cultures.</string>
    <string name="article_1_source_score_1">The cited study called \"Levels of Anxiety on our Pets\" is not peer reviewed.</string>
    <string name="article_1_source_score_2">The research study \"Levels of Anxiety on our Pets\" cited in the article is not published in a scientific journal.</string>
    <string name="article_1_source_score_3">The author does not specialize in scientific studies, her work is more concentrated on historical pieces.</string>
    <string name="article_1_source_score_4">The articles used a research paper called \"How mental illness of pet owners affects their pets\" was retracted.</string>
    <string name="article_1_content_score_1">Vague specifics about the study, the article does not contain quantitative data.</string>
    <string name="article_1_content_score_2">The article uses strong emotional language\n\t - \"I feel that&#8230;\"\n\t - \"I would have liked&#8230;\"</string>

    <!-- Article 2 -->
    <string name="article_2_header">Do Anxious Owners Make for Anxious Dogs?</string>
    <string name="article_2_source">National Geographic</string>
    <string name="article_2_credibility">82%</string>

    <array name="array_search_by">
        <item>Articles</item>
        <item>Authors</item>
        <item>Publishers</item>
    </array>

    <array name="array_sort_by">
        <item>-- Sort By --</item>
        <item>Highest Rating</item>
        <item>Lowest Rating</item>
        <item>Favorites</item>
        <item>Not Viewed</item>
    </array>

    <array name="array_filter_by">
        <item>-- Filter By --</item>
        <item>1 week ago</item>
        <item>2 weeks ago</item>
        <item>3 weeks ago</item>
        <item>4 weeks ago</item>
    </array>
</resources>
