<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="25dp"
    android:orientation="vertical"
    android:paddingStart="25dp"
    android:paddingEnd="25dp"
    tools:context=".ArticleActivity">

    <RelativeLayout
        android:id="@+id/article_header_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <ImageView
            android:id="@+id/article_header_source_logo"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_natgeo_big_logo" />

        <Button
            android:id="@+id/article_header_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="@string/article_hyperlink" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/article_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/article_1_header"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/article_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="-2dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="8dp"
                android:text="@string/article_1_author" />

            <TextView
                android:id="@+id/article_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/article_1_desc" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:layout_marginTop="15dp"
                android:background="@color/colorLightGrey" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="7dp"
                android:text="@string/average_credibility_score"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:background="@color/colorLightGrey" />

            <iammert.com.expandablelib.ExpandableLayout
                android:id="@+id/type_source_elayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:parentLayout="@layout/"
                app:childLayout=""/>

        </LinearLayout>
    </ScrollView>


</LinearLayout>