<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="90dp"
    android:background="?android:selectableItemBackground"
    android:paddingStart="15dp"
    android:paddingTop="15dp"
    android:paddingEnd="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/item_logo"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_weight="1"
            android:src="@mipmap/ic_natgeo" />

        <LinearLayout
            android:id="@+id/item_header_text_layout"
            android:layout_width="225dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

            <TextView
                android:id="@+id/item_article_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/article_1_header"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/item_article_source"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/article_1_source" />

        </LinearLayout>

        <TextView
            android:id="@+id/item_credibility"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/article_1_credibility"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/item_fav_button"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="?android:selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_star_border_black_24dp"
            android:tag="nbg" />


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_alignParentBottom="true"
        android:background="@color/colorLightGrey" />

</RelativeLayout>